--- a/public/css/style.css
+++ b/public/css/style.css
@@ -245,44 +245,18 @@ h6 {
 .message:empty {
   display: none; }
 
-#treeMenu__currentTree {
-  font-size: 20px;
+#pageTitle {
+  min-width: 375px;
+  left: 50%;
+  font-size: 24px;
   font-weight: 900;
   padding: 16px 24px;
   border-radius: 4px;
-  cursor: pointer;
-  transition: all .1s ease-in-out; }
-  #treeMenu__currentTree:hover, #treeMenu__currentTree:focus {
-    box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.25);
-    transform: scale(1.02); }
-  #treeMenu__currentTree:active {
-    background-color: rgba(255, 255, 255, 0.06);
-    transform: scale(1);
-    transition: transform .0s ease-in-out; }
-
-#treeMenu__options {
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-  transform: translateX(-50%);
-  width: 100%;
-  min-width: 375px;
-  background-color: white;
-  border-radius: 8px;
-  color: initial;
-  top: calc(100% + 8px);
-  box-shadow: var(--leafShadow); }
-
-#treeMenu {
-  position: absolute;
+  transition: all .1s ease-in-out;
   margin: 0 auto;
   text-align: center;
-  display: flex;
-  flex-direction: column;
-  left: calc(50% + 16px);
   -webkit-transform: translateX(-50%);
   transform: translateX(-50%); }
-  #treeMenu .active {
-    font-weight: 900; }
 
 .leaf {
   border-radius: 50%;
@@ -400,7 +374,7 @@ h6 {
     align-items: baseline;
     padding: 24px; }
 
-  #treeMenu {
+  #pageTitle {
     width: calc(100% - 48px);
     bottom: 24px;
     left: 50%; }
