--- a/scss/index.scss
+++ b/scss/index.scss
@@ -18,10 +18,10 @@ $brand: #002831;
     --bounceEasing: cubic-bezier(0.51, 0.92, 0.24, 1.15);
     --iconButtonSize: 44px;
     --color_border: #D9DFE0;
-    --leafSize: 96px;
+    --leafSize: 72px;
     --profileImageSize: 128px;
     --leafCaptionOffset: 12px;
-    --leafSpacing: 32px;
+    --leafSpacing: 24px;
     --leafShadow: 0px 2px 16px rgba(0, 0, 0, 0.05), 0px 1px 2px rgba(0, 0, 0, 0.07), 0px 4px 24px rgba(0, 0, 0, 0.08);
     --leafCaptionShadow: 0 0 12px rgba(0,0,0, .2);
     --detailsPanelDecorationTopOffset : 0;
@@ -96,10 +96,40 @@ h6 {
     }
 }
 
+polyline,
+path {
+    fill: none;
+    stroke: var(--color_border);
+    stroke-width: 2;
+  }
+
+.leaf_connections {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: visible;
+}
+
+// .connectionLine {
+//     // position: absolute;
+//     // left: 0;
+//     // right: 0;
+//     // top: 0;
+//     // bottom: 0;
+//     // width: 100%;
+//     // height: 100%;
+// }
+
+
 #mainContent {
     display: flex;
     position: relative;
     flex: 1;
+    overflow: hidden;
     transition: background-color $detailsRevealTiming ease-in-out;
 
     &:focus {
@@ -133,16 +163,38 @@ h6 {
     }
 }
 
+.connection {
+    --halfLeafSize: calc(var(--leafSize) / 2);
+
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: -1;
+    background-color: red;
+
+    &_parentToChild {
+        height: calc(var(--leafSize) + 12px);
+        width: 10px;
+        top: var(--leafSpacing);
+    }
+
+    &_childToParent {
+        height: calc(var(--leafSize) + 12px);
+        width: 10px;
+        bottom: var(--leafSpacing);
+    }
+}
+
 #familyTree {
     flex: 1;
     transition: margin-right $detailsRevealTiming ease-in-out;
     display: flex;
-    overflow: scroll;
     flex-wrap: nowrap;
     justify-content: center;
     position: relative;
     top: 56px;
     padding-bottom: 80px;
+    overflow: scroll;
 
     &:focus {
         outline: 0 solid transparent;
@@ -395,6 +447,29 @@ h6 {
     transform: translateX(-50%);
 }
 
+.spouses .leaf svg {
+    z-index: -2;
+
+    path {
+        stroke-linejoin: arcs;
+    }
+}
+
+.spouses:hover .leaf {
+    svg {
+        z-index: -1;
+        path {
+            transition: all .1s ease-in-out;
+            stroke: var(--color_outline);
+            stroke-width: 4;
+        }
+    }
+
+    // transform: scale(1.05);
+    // z-index: 1;
+}
+
+
 .leaf {
     border-radius: 50%;
     box-shadow: var(--leafShadow);
@@ -416,16 +491,10 @@ h6 {
         opacity: 0;
         transform: scale(.8);
         transition: transform $detailsRevealTiming ease-in-out;
-        z-index: -1;
-    }
-
-    &:hover {
-        transform: scale(1.05);
-        z-index: 1;
     }
 
     &:active {
-        transform: scale(.95);
+        // transform: scale(.95);
         transition: all .05s ease-in-out
     }
 
