--- a/public/css/style.css
+++ b/public/css/style.css
@@ -57,6 +57,9 @@ h6 {
   font-size: 12px;
   color: var(--brand); }
 
+img {
+  max-width: 100%; }
+
 .mainNav {
   display: flex;
   background-color: var(--brand);
@@ -81,6 +84,10 @@ h6 {
     background-position: center;
     background-repeat: no-repeat;
     height: var(--navDecorationHeight); }
+  .mainNav__profile-image {
+    pointer-events: none;
+    width: 100%;
+    height: 100%; }
 
 polyline,
 path {
@@ -201,7 +208,8 @@ path {
   width: var(--accountMenuSize);
   height: var(--accountMenuSize);
   border-radius: 8px;
-  background-color: var(--color_yellow); }
+  background-color: var(--color_yellow);
+  padding: 0; }
   #accountMenu:hover {
     cursor: pointer; }
 
@@ -335,7 +343,7 @@ path {
     height: calc(var(--leafSize) + 20px);
     top: -4px;
     border-radius: 100px;
-    box-shadow: 0 0 0 4px var(--color_outline);
+    box-shadow: 0 0 0 4px white inset, 0 0 0 4px var(--color_outline);
     opacity: 0;
     transform: scale(0.8);
     transition: transform 0.2s ease-in-out; }
