--- a/scss/index.scss
+++ b/scss/index.scss
@@ -68,6 +68,10 @@ h6 {
     color: var(--brand);
 }
 
+img {
+    max-width: 100%;
+}
+
 .mainNav {
     display: flex;
     background-color: var(--brand);
@@ -93,6 +97,12 @@ h6 {
         background-position: center;
         background-repeat: no-repeat;
         height: var(--navDecorationHeight);
+    }
+
+    &__profile-image {
+        pointer-events: none;
+        width: 100%;
+        height: 100%;
     }
 }
 
@@ -287,6 +297,7 @@ path {
     height: var(--accountMenuSize);
     border-radius: 8px;
     background-color: var(--color_yellow);
+    padding: 0;
 
     &:hover {
         cursor: pointer;
@@ -487,7 +498,7 @@ path {
         height: calc(var(--leafSize) + 20px);
         top: -4px;
         border-radius: 100px;
-        box-shadow: 0 0 0 4px var(--color_outline);
+        box-shadow: 0 0 0 4px white inset, 0 0 0 4px var(--color_outline);
         opacity: 0;
         transform: scale(.8);
         transition: transform $detailsRevealTiming ease-in-out;
